<resources>
     <string name="app_name">UpKnowledge</string>
     <string name="more_txt">More up to the editor of knowledge</string>
     <string name="home_page_txt">Home</string>
     <string name="find_txt">Find</string>
     <string name="follow_txt">Follow</string>
     <string name="mine_txt">Mine</string>
     <string name="watch_history_txt">Watch History</string>
     <string name="my_cache_txt">My cache</string>
     <string name="setting_txt">setting</string>
     <string name="recently_popular_txt">Recently Popular</string>
     <string name="popular_ranking_txt">Popular Ranking</string>
     <string name="latest_release_txt">Latest Release</string>
     <string name="hot_author_txt">Hot Author</string>
     <string name="lately_update_author_txt">Lately Update Author</string>
     <string name="had_follow_txt">Had Follow</string>
     <string name="join_author_txt">Join Author</string>
     <string name="all_author_txt">All Author</string>
</resources>
