<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical">

     <ImageView
          android:layout_marginTop="48dp"
          android:layout_gravity="center_horizontal"
          android:layout_width="80dp"
          android:background="@mipmap/ic_launcher_round"
          android:layout_height="80dp"/>

     <View
          android:layout_width="match_parent"
          android:layout_height="1px"
          android:layout_marginTop="48dp"
          android:background="@color/stack"/>

     <ScrollView
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

          <LinearLayout
               android:layout_width="match_parent"
               android:orientation="vertical"
               android:layout_height="wrap_content">

               <TextView
                    android:id="@+id/watch_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:text="@string/watch_history_txt"/>

               <TextView
                    android:id="@+id/my_cache"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:text="@string/my_cache_txt"/>

               <TextView
                    android:id="@+id/setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:text="@string/setting_txt"/>
          </LinearLayout>

     </ScrollView>

</LinearLayout>